@@ -79,26 +79,33 @@ NULL
 #' "defunct".
 #'
 #' \tabular{lll}{
-#' \strong{Deprecated}    \tab \strong{Replacement}              \tab \strong{Notes}\cr
-#' \code{mapZones}        \tab \code{\link{mapGrid}}             \tab Deprecated 2016-02-13\cr
-#' \code{mapMeridians}    \tab \code{\link{mapGrid}}             \tab Deprecated 2016-02-13\cr
-#' \code{addColumn}       \tab \code{\link{oceSetData}}          \tab Deprecated 2016-08-01\cr
-#' \code{oce.magic}       \tab \code{\link{oceMagic}}            \tab Deprecated 2016-09-01\cr
-#' \code{ctdAddColumn}    \tab \code{\link{oceSetData}}          \tab Deprecated 2016-11-11\cr
-#' \code{ctdUpdateHeader} \tab -                                 \tab Deprecated 2016-11-11\cr
-#' \code{oce.as.POSIXlt}  \tab \code{\link[lubridate]{parse_date_time}} \tab Deprecated 2016-12-17\cr
+#' \strong{Deprecated}       \tab \strong{Replacement}            \tab \strong{Notes}\cr
+#' \code{findInOrdered(x,f)} \tab \code{\link{findInterval}(f,x)} \tab Deprecated 2017-09-07\cr
+#' \code{mapZones}           \tab \code{\link{mapGrid}}           \tab Deprecated 2016-02-13\cr
+#' \code{mapMeridians}       \tab \code{\link{mapGrid}}           \tab Deprecated 2016-02-13\cr
+#' \code{addColumn}          \tab \code{\link{oceSetData}}        \tab Deprecated 2016-08-01\cr
+#' \code{oce.magic}          \tab \code{\link{oceMagic}}          \tab Deprecated 2016-09-01\cr
+#' \code{ctdAddColumn}       \tab \code{\link{oceSetData}}        \tab Deprecated 2016-11-11\cr
+#' \code{ctdUpdateHeader}    \tab -                               \tab Deprecated 2016-11-11\cr
+#' \code{oce.as.POSIXlt}     \tab \code{\link[lubridate]{parse_date_time}} \tab Deprecated 2016-12-17\cr
 #' }
-#'
 #'
 #' The following are marked "defunct", so calling them in the
 #' the present version produces an error message that hints at a replacement
 #' function. Once a function is marked "defunct" on one CRAN release, it will
 #' be slated for outright deletion in a subsequent release.
 #'
-#' \tabular{lll}{
-#' \strong{Defunct}   \tab \strong{Replacement}     \tab \strong{Notes}\cr
-#' \code{makeSection} \tab \code{\link{as.section}} \tab Improve utility and name sensibility\cr
-#' \code{columns}     \tab \code{\link{read.ctd}}   \tab Unnecessary; never worked\cr
+#'\tabular{lll}{
+#'\strong{Defunct}   \tab \strong{Replacement}     \tab \strong{Notes}\cr
+#'\code{makeSection} \tab \code{\link{as.section}} \tab Improve utility and name sensibility\cr
+#'\code{columns}     \tab \code{\link{read.ctd}}   \tab Unnecessary; never worked\cr
+#'}
+#'
+#' The following were removed in recent years.
+#'
+#'\tabular{lll}{
+#'\strong{Function}  \tab \strong{Replacement}     \tab \strong{Notes}\cr
+#' FILL IN           \tab FILL IN                  \tab FILL IN
 #'}
 #'
 #' Several \sQuote{oce} function arguments are considered "deprecated", which
